Replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance()